# smartlogger

./: .gitignore  CHANGELOG.md  LICENSE  README.md  check_package.py  debug_colors.py  demo_smartlogger.py  pyproject.toml  setup.py  simple_color_test.py  upload_to_pypi.sh  vscode_test.py
.github/workflows/: publish.yml
docs/: configuration.md  installation.md  usage.md
examples/: basic_usage.py  custom_colors.py  integration_example.py
smartlogger/: __init__.py  auto.py  exceptions.py
smartlogger/config/: __init__.py  colors.py  defaults.py
smartlogger/core/: __init__.py  formatter.py  handler.py  monkey_patch.py
smartlogger/utils/: __init__.py  compatibility.py  terminal.py
tests/: test_auto.py  test_formatter.py  test_handler.py  test_integration.py
