[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartlogger"
version = "0.1.0"
description = "Colorful logging extension for Python logging module"
authors = [{name = "SmartLogger Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/username/smartlogger"
Repository = "https://github.com/username/smartlogger.git"
Issues = "https://github.com/username/smartlogger/issues" 